--- a/index.html
+++ b/index.html
@@ -384,6 +384,40 @@
                         </a>
                     </div>
                 </div>
+             <div class="files-grid" id="files-container">
+                <div class="file-card">
+                    <div class="file-icon">📄</div>
+                    <div class="file-info">
+                        <h3>AI學習週報 II - 2025年11月29日</h3>
+                        <p class="file-type">PDF 文件</p>
+                        <p class="file-description">AI學習第二週重點整理與心得分享</p>
+                    </div>
+                    <div class="file-actions">
+                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning II -20251129-weekly summary.pdf', 'pdf')">
+                            👁️ 線上查看
+                        </button>
+                        <a href="files/AI Learning II -20251129-weekly summary.pdf" download class="file-btn download-btn">
+                            ⬇️ 下載
+                        </a>
+                    </div>
+                </div>
+                <div class="files-grid" id="files-container">
+                <div class="file-card">
+                    <div class="file-icon">📄</div>
+                    <div class="file-info">
+                        <h3>AI學習週報 I - 2025年121月06日</h3>
+                        <p class="file-type">PDF 文件</p>
+                        <p class="file-description">AI學習第三週重點整理與心得分享</p>
+                    </div>
+                    <div class="file-actions">
+                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning III -20251206-weekly summary.pdf', 'pdf')">
+                            👁️ 線上查看
+                        </button>
+                        <a href="files/AI Learning III -20251206-weekly summary.pdf" download class="file-btn download-btn">
+                            ⬇️ 下載
+                        </a>
+                    </div>
+                </div>
                 <!-- 你可以繼續添加更多檔案 -->
             </div>
         </section>
@@ -455,4 +489,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
