--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 <div class="file-card">
                     <div class="file-icon">📄</div>
                     <div class="file-info">
-                        <h3>AI學習週報 I - 2025年12月06日</h3>
+                        <h3>AI學習週報 III - 2025年12月06日</h3>
                         <p class="file-type">PDF 文件</p>
                         <p class="file-description">AI學習第三週重點整理與心得分享</p>
                     </div>
@@ -491,4 +491,5 @@
 </body>
 
 </html>
+
 
