--- a/index.html
+++ b/index.html
@@ -412,15 +412,34 @@
                         <p class="file-description">AI學習第三週重點整理與心得分享</p>
                     </div>
                     <div class="file-actions">
-                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning III -20251206-weekly summary.pdf', 'pdf')">
+                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning III - 20251206-weekly summary.pdf', 'pdf')">
                             👁️ 線上查看
                         </button>
-                        <a href="files/AI Learning III -20251206-weekly summary.pdf" download class="file-btn download-btn">
+                        <a href="files/AI Learning III - 20251206-weekly summary.pdf" download class="file-btn download-btn">
                             ⬇️ 下載
                         </a>
                     </div>
                 </div>
-                <!-- 你可以繼續添加更多檔案 -->
+
+                <div class="files-grid" id="files-container">
+                <div class="file-card">
+                    <div class="file-icon">📄</div>
+                    <div class="file-info">
+                        <h3>AI學習週報 IV - 2025年12月13日</h3>
+                        <p class="file-type">PDF 文件</p>
+                        <p class="file-description">AI學習第四週重點整理與心得分享</p>
+                    </div>
+                    <div class="file-actions">
+                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning IV - 20251213- 4th week.pdf', 'pdf')">
+                            👁️ 線上查看
+                        </button>
+                        <a href="files/AI Learning IV - 20251213- 4th week.pdf" download class="file-btn download-btn">
+                            ⬇️ 下載
+                        </a>
+                    </div>
+                </div>                    
+                    
+                    <!-- 你可以繼續添加更多檔案 -->
             </div>
         </section>
 
@@ -493,6 +512,7 @@
 </body>
 
 </html>
+
 
 
 
