--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
                         <p class="file-description">AI學習第四週重點整理與心得分享</p>
                     </div>
                     <div class="file-actions">
-                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning IV - 20251213- 4th week.pdf', 'pdf')">
+                        <button class="file-btn view-btn" onclick="viewFile('files/AI Learning IV - 20251213-weekly summary.pdf', 'pdf')">
                             👁️ 線上查看
                         </button>
-                        <a href="files/AI Learning IV - 20251213- 4th week.pdf" download class="file-btn download-btn">
+                        <a href="files/AI Learning IV - 20251213-weekly summary.pdf" download class="file-btn download-btn">
                             ⬇️ 下載
                         </a>
                     </div>
@@ -535,6 +535,7 @@
 </body>
 
 </html>
+
 
 
 
